# metrics

./: .gitignore  README.md  pyproject.toml  setup.ipynb  setup.py
.ipynb_checkpoints/: setup-checkpoint.ipynb
metrics/: core.py  metrics.ipynb  metrics.py
metrics/.ipynb_checkpoints/: metrics-checkpoint.ipynb  metrics-checkpoint.py
metrics/old/: metrics (1).py  metrics.ipynb
metrics/test/: test_func_vs_func.py  test_func_vs_func_njit.py  test_func_vs_sm.py  test_lpols_vs_lpols_njit.py  test_lpols_vs_sm_OLS.py  test_performance.ipynb
tests/: test_func_vs_func.py  test_func_vs_func_njit.py  test_func_vs_sm.py  test_performance.ipynb
